syntax = "proto3";

package macbox.manage.v1;

message CreateSandboxRequest {
}

message CreateSandboxResponse {
    string sandbox_uuid = 1;
}

message ExecRequest {
    repeated string args = 1;
}

message ExecResponse {

}